--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,64 +8,93 @@
   <link rel="stylesheet" href="main.css">
   <title>Christopher Killen</title>
 </head>
+
 <body>
 
-    <div class="content">
-      <div class="about">
-        <img class="pic" src="/Users/chrisk/Work/pro-portfolio/s2cU5%a%RQeZYPfpyisLnQ_thumb_7d0.jpg" alt="">
-        <div class="info">
-          <h2>Chris Killen</h2>
-          <h3>Full Stack Developer</h3>
-          <div class="socials">linkden, github, twitter icons</div>
+  <div class="content">
+    <div class="about">
+      <div class="pic">
+        <div class="pic-text">
+          <h3>Click to learn more about me!</h3>
         </div>
-
       </div>
-      <div class="projects">
-        <div class="arrow hidden" id="up-arrow">&#8593;</div>
+      <div class="info">
+        <h2>Chris Killen</h2>
+        <h3>Full Stack Developer</h3>
+        <div class="socials">linkden, github, twitter icons</div>
+      </div>
 
+    </div>
+    <div class="projects">
+      <h3>Projects</h3>
+      <div class="arrow hidden" id="up-arrow">&#8593;</div>
+      <div class="project-section">
         <div class="project selected">
-          <div class="project-title">
+          <div class="front">
+            <div class="project-title">
               <h3>Voyager</h3>
+            </div>
+            <div class="project-content">
+              <p>A multiplayer game built using phaser and socket.io on a MERN stack</p>
+            </div>
           </div>
-          <div class="project-content">
-              <p>A  multiplayer game built using phaser and socket.io on a MERN stack</p>
+          <div class="back">
+
+          </div>
+        </div>
+        <div class="project">
+          <div class="front">
+            <div class="project-title">
+              <h3>Voyager</h3>
+            </div>
+            <div class="project-content">
+              <p>A multiplayer game built using phaser and socket.io on a MERN stack</p>
+            </div>
+          </div>
+          <div class="back">
+
           </div>
         </div>
 
         <div class="project">
+          <div class="front">
             <div class="project-title">
-                <h3>Test</h3>
+              <h3>Voyager</h3>
             </div>
             <div class="project-content">
-                <p>A  multiplayer game built using phaser and socket.io on a MERN stack</p>
+              <p>A multiplayer game built using phaser and socket.io on a MERN stack</p>
             </div>
           </div>
+          <div class="back">
 
-          <div class="project">
-              <div class="project-title">
-                  <h3>Chr</h3>
-              </div>
-              <div class="project-content">
-                  <p>A  multiplayer game built using phaser and socket.io on a MERN stack</p>
-              </div>
+          </div>
+        </div>
+
+        <div class="project">
+          <div class="front">
+            <div class="project-title">
+              <h3>Voyager</h3>
             </div>
+            <div class="project-content">
+              <p>A multiplayer game built using phaser and socket.io on a MERN stack</p>
+            </div>
+          </div>
+          <div class="back">
 
-            <div class="project">
-                <div class="project-title">
-                    <h3>3ed</h3>
-                </div>
-                <div class="project-content">
-                    <p>A  multiplayer game built using phaser and socket.io on a MERN stack</p>
-                </div>
-              </div>
+          </div>
+        </div>
+      </div>
+
+
 
       <div class="arrow" id="down-arrow">&#8595;</div>
-      </div>
-      <div class="contact">
-        <h4>Click here to contact me</h4>
-      </div>
     </div>
+    <div class="contact">
+      <h4>Click here to contact me</h4>
+    </div>
+  </div>
   </div>
   <script src="index.js"></script>
 </body>
+
 </html>
