--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
   <title>Christopher Killen</title>
 </head>
@@ -21,7 +22,11 @@
       <div class="info">
         <h2>Chris Killen</h2>
         <h3>Full Stack Developer</h3>
-        <div class="socials">linkden, github, twitter icons</div>
+        <div class="socials">
+          <a href="https://www.linkedin.com/in/christopher-killen-21360774/" target="_blank"><i class="fab fa-linkedin about-icon"></i></a>
+          <a href="https://github.com/CKillen" target="_blank"> <i class="fab fa-github-square about-icon"></i></a>
+          <a href="https://twitter.com/ChrisKillenDev" target="_blank"><i class="fab fa-twitter about-icon" ></i></a> 
+        </div>
       </div>
 
     </div>
@@ -39,48 +44,80 @@
             </div>
           </div>
           <div class="back">
-
+            <p class="back-text">
+              Built as the final project for bootcamp. It was programmed by a team of four, in which I 
+              focused mainly on the user system, react integration, integration of all systems and 
+              socket debugging and fixing.
+            </p>
+            <div class="back-links">
+                <a href="" target="_blank">web link</a>
+                <a href="https://github.com/james-ritchey/Project3" target="_blank"> <i class="fab fa-github-square about-icon"></i></a>
+            </div>
           </div>
         </div>
         <div class="project">
           <div class="front">
             <div class="project-title">
-              <h3>Voyager</h3>
+              <h3>StreamerCRM</h3>
             </div>
             <div class="project-content">
-              <p>A multiplayer game built using phaser and socket.io on a MERN stack</p>
+              <p>Web app built on a node stack to help client manage a growing community</p>
             </div>
           </div>
           <div class="back">
+            <p class="back-text">
+                Solo developed project using Node, MongoDB and Express. It connects to Twitch's API to pull data and 
+                helps with community management by increasing the effienceny of sending personalized messages. A public 
+                version is in the works.
+            </p>
+            <div class="back-links">
+                <h4>N/A</h4>
+                <h4>N/A</h4>
+            </div>
+          </div>
 
+        </div>
+
+        <div class="project">
+          <div class="front">
+            <div class="project-title">
+              <h3>MUED</h3>
+            </div>
+            <div class="project-content">
+              <p>Web page that reads the mood of text</p>
+            </div>
+          </div>
+          <div class="back">
+              <p class="back-text">
+                First project built in bootcamp with a team of four. It takes in audio and converts it to text, or takes
+                inputted text, and allows the user to see the mood. I was in charge of all Javascript, API integration 
+                and AWS bucket integration.
+              </p>
+              <div class="back-links">
+                <a href="" target="_blank">web link</a>
+                <a href="https://github.com/AFilippis/TeamSingapore-Project1" target="_blank"> <i class="fab fa-github-square about-icon"></i></a>
+              </div>
           </div>
         </div>
 
         <div class="project">
           <div class="front">
             <div class="project-title">
-              <h3>Voyager</h3>
+              <h3>SWON Compad</h3>
+              <p>In development</p>
             </div>
             <div class="project-content">
-              <p>A multiplayer game built using phaser and socket.io on a MERN stack</p>
+              <p>Being built on a MERN stack, a Roll20 like site designed specifically for SWON.</p>
             </div>
           </div>
           <div class="back">
-
-          </div>
-        </div>
-
-        <div class="project">
-          <div class="front">
-            <div class="project-title">
-              <h3>Voyager</h3>
-            </div>
-            <div class="project-content">
-              <p>A multiplayer game built using phaser and socket.io on a MERN stack</p>
-            </div>
-          </div>
-          <div class="back">
-
+              <p class="back-text">
+                Please follow my blog for updates on progress, as well as design plans. 
+              </p>
+              <div class="back-links">
+                <a href="" target="_blank">Blog link</a>
+                <a href="" target="_blank"> <i class="fab fa-github-square about-icon"></i></a>
+              </div>
           </div>
         </div>
       </div>
@@ -93,6 +130,29 @@
       <h4>Click here to contact me</h4>
     </div>
   </div>
+  </div>
+
+  <div class="contact-form">
+    <div class="contact-section">
+      <h1>Contact Form</h1>
+      <div class="email-section">
+          <h3>Email</h3>
+          <input type="text">
+      </div>
+      <div class="email-section">
+          <h3>Name</h3>
+          <input type="text">
+      </div>
+      <div class="email-section">
+          <h3>Message</h3>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <button>Send</button>
+      </div>
+
+    </div>
+    <div class="main-page-link">
+      <h4>Click here to go back</h4>
+    </div>
   </div>
   <script src="index.js"></script>
 </body>
